{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 172,
  "lineage": "1ba6e26e-0884-aaff-460d-50bff11159b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chatapp-nat-gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02619b8733c798710",
            "association_id": "eipassoc-0e7967087cb93d759",
            "domain": "vpc",
            "id": "eipalloc-02619b8733c798710",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-03b9df156f28f5484",
            "private_dns": "ip-10-0-0-137.eu-west-1.compute.internal",
            "private_ip": "10.0.0.137",
            "public_dns": "ec2-52-50-206-129.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.206.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chatapp-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112615800:internet-gateway/igw-0e802a4241b3b001a",
            "id": "igw-0e802a4241b3b001a",
            "owner_id": "471112615800",
            "vpc_id": "vpc-0784e020d62e4528c"
          },
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "chatapp-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02619b8733c798710",
            "association_id": "eipassoc-0e7967087cb93d759",
            "connectivity_type": "public",
            "id": "nat-0d39f2d81cec65bc2",
            "network_interface_id": "eni-03b9df156f28f5484",
            "private_ip": "10.0.0.137",
            "public_ip": "52.50.206.129",
            "subnet_id": "subnet-08fb6cc21384e703d"
          },
          "dependencies": [
            "aws_eip.chatapp-nat-gateway-eip",
            "aws_subnet.chatapp-public",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112615800:route-table/rtb-00b3bad17f66b0d17",
            "id": "rtb-00b3bad17f66b0d17",
            "owner_id": "471112615800",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d39f2d81cec65bc2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0784e020d62e4528c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.chatapp-nat-gateway-eip",
            "aws_nat_gateway.chatapp-nat-gateway",
            "aws_subnet.chatapp-public",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112615800:route-table/rtb-0e9c521b5ef3ec6c9",
            "id": "rtb-0e9c521b5ef3ec6c9",
            "owner_id": "471112615800",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e802a4241b3b001a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0784e020d62e4528c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.chatapp-internet-gateway",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058bfcaec5e3a0c44",
            "route_table_id": "rtb-00b3bad17f66b0d17",
            "subnet_id": "subnet-0246e3b1eacdb85a7"
          },
          "dependencies": [
            "aws_eip.chatapp-nat-gateway-eip",
            "aws_nat_gateway.chatapp-nat-gateway",
            "aws_route_table.private-route-table",
            "aws_subnet.chatapp-private",
            "aws_subnet.chatapp-public",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a905e8144f2b0d3e",
            "route_table_id": "rtb-0e9c521b5ef3ec6c9",
            "subnet_id": "subnet-08fb6cc21384e703d"
          },
          "dependencies": [
            "aws_internet_gateway.chatapp-internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.chatapp-public",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112615800:security-group/sg-0838684c14d1aa16c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0838684c14d1aa16c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow-all",
            "name_prefix": "",
            "owner_id": "471112615800",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0784e020d62e4528c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chatapp-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112615800:subnet/subnet-0246e3b1eacdb85a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0246e3b1eacdb85a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112615800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0784e020d62e4528c"
          },
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chatapp-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112615800:subnet/subnet-08fb6cc21384e703d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fb6cc21384e703d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112615800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0784e020d62e4528c"
          },
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chatapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:471112615800:vpc/vpc-0784e020d62e4528c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084860954eae435a2",
            "default_route_table_id": "rtb-008263c5b9676080f",
            "default_security_group_id": "sg-0dea68c3ec14a6a71",
            "dhcp_options_id": "dopt-0d74775b392d2954f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0784e020d62e4528c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-008263c5b9676080f",
            "owner_id": "471112615800"
          }
        }
      ]
    }
  ]
}